--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -1,5 +1,5 @@
 <div>
     <input type="text" placeholder="Search Food from DD 😄 Food Corner" 
     [(ngModel)]="searchItem" (change)="search()">
-    <button (click)="search()">Search Food</button>
+    <button (click)="search()">Search </button>
 </div>
